--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     
 </address>
     </header>
-    <section><main>
+    <main>
+
+     <section>
+
         <h1>Effective Solutions
             for Your Business</h1>
         <button type="button">Order Service</button>
