--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <section>
 
+        <h2>What are we doing</h2>
 
         <ul>
             <li><img src="./images/imeges1.jpg" alt="works" width="360" height="300"></li>
